src/cbPyLib/cellbrowser/cbWeb/css/cellBrowser.css
/* tsneViewer.js class definitions */
/* * {padding: 0; margin: 0} */ /* important, otherwise precise placement is impossible */ 
/* body { font-family: Roboto, sans-serif } */
body { font-family: Arial,Helvetica,sans-serif; line-height:1.0; overflow:hidden }
canvas { user-select: none }

section { font-weight: bold; padding-top: 5px; padding-bottom: 5px }

#tpExprViewTitle { 
        background-color: #eee;
        padding: 5px;
        height: 25px;
        /*border-bottom: 1px solid black; */
}

#tpExprView { 
        position: absolute;
        z-index: 100;
        display: block;
        background-color: white;
        top: 1%;
        left: 1%;
        height: 99%;
        width: 99%;
        border: 1px solid grey;
}

#tpGeneExprMetaLabel {
        margin-left: 6px;
        margin-right: 6px;
}

#tpExprViewPlot {
        display:flex;
        flex-direction: row;
        flex-flow: wrap;
        flex: 1;
        min-height: 0;
        padding-top:10px;
        overflow: auto;
}

#tpExprViewContent {
        padding: 6px;
        height: 100%;
        display: flex;
        flex-direction: column;
        box-sizing: border-box;
}

#tpGeneExprLabel {
        margin-right: 6px;
}

.tpTitle {
        position: absolute;
        z-index: 100;
        border-radius: 3px;
        padding: 2px 4px;
}

.tpGeneExprCombo {
        margin-left: 6px;
        margin-right: 6px;
}

/* selectize dropdown triangle is black by default, make light grey like chosen's triangle */
.selectize-control.single .selectize-input:after {
        border-color: #888 transparent transparent transparent;
}

#tpLegendBar { 
        cursor:default; 
        padding-left: 2px; 
        border-left: 1px solid #D7D7D7; 
        height:100%;
}

.tpDatasetPane { 
        padding: 5px !important; 
        padding-left: 10px !important; 
        overflow: hidden;
        line-height: 120%; 
}

#mpTitle {
    cursor : default;
    left : 8px;
    width : max-content;
    display : block;
    position : absolute;
    font-size : 16px;
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    text-shadow:
       1px 1px 2px rgba(0,0,0,0.8),
      -1px -1px 2px rgba(0,0,0,0.8),
       1px -1px 2px rgba(0,0,0,0.8),
      -1px  1px 2px rgba(0,0,0,0.8);
}

.sliderContainer {
        position: absolute;
        display: grid;
        grid-template-columns: 45px 120px 20px;
}
#mpSliderDiv {
        padding: 2px 6px 0px 6px;
}

.sliderLabel {
    font-size: 11px;
    z-index: 10;
    font-weight: bold;
    background: transparent;
}

.tpLegend { font-size:13px; /* border: 2px solid transparent; */ cursor:default; clear:both; display:grid; grid-template-columns:auto auto 1fr auto; column-gap:2px; }
.tpLegendHl { background-color: #ccc; color: black; }
.tpHint { font-weight:normal; line-height:1.4; font-size: 80%; margin-top:4px}
#tpLegendHeader { background-color:#eee; color: #777; margin-top: 2px}
#tpLegendTitle { font-weight: bold }
#tpLegendSubTitle { font-size: 80%; font-style: italic }
#tpLegendCol1 { padding-left: 1px; vertical-align: middle}
#tpLegendCol2 { float: right; padding-right: 2px; padding-top:2px}
.tpLegendSelect { outline: 2px solid black }
.tpLegendLabel { user-select: none; overflow-wrap: break-word; min-width: 0; }
/*.tpLegendCount { display:inline-block; position: absolute; right: 4px; color: #888} */
.tpLegendCount { color: #888; white-space: nowrap; align-self: end; padding-left: 4px; }
.tpLegend .tpLegendCheckbox { margin-right: 2px; margin-top: 2px; align-self: start; }
.tpGrey { color: #bbb }

#tpLegendColorChecked,
#tpLegendAll,
#tpLegendNone,
#tpLegendInvert,
#tpLegendNotNull {
  font-size: 14px;
  margin: 1px 1px;
} 

.mpFlipbookLabel {
        font-weight:bold;
}

#mpFlipbookCont {
        background: rgba(255,255,255,0.65);
        padding: 6px 12px 12px;
        border-radius: 4px;
        width: auto !important;
        right: 12px;
}
#mpFlipbookCont #mpFlipbook {
        width: 100% !important;
}

.ui-helper-reset { font-size: 12px}
.ui-tabs { padding: 0 }
.ui-tabs { padding: 0 }
.ui-tabs-nav { border: 0 } /* color control should not be separated from tabs */
.ui-tabs .ui-tabs-panel { padding-top:5px; border:1px solid lightgray; padding:0} /* for marker panels */
.ui-tabs-anchor { padding: 3px }
.ui-tabs .ui-tabs-nav .ui-tabs-anchor { padding: 3px }

.tab-pane { padding: .4em 1em; border: 1px solid lightgrey }
.ui-corner-all { border-radius: 0px } /* dialogs */
#tpOpenDatasetButton { border-radius: 4px }
.ui-menu-item { font-size:13px }
.ui-menu .ui-menu-item-wrapper { padding: 1px 1em 1px .4em; }
.ui-tooltip { font-size: 13px }
#tpButtonInfo { height: 24px; border-radius: 4px; padding-top: 3px }
.tpDialogInput { margin-left: 12px; margin-top: 5px; margin-bottom: 12px; }
#tpDialog { z-index: 1001; }

.tpIconButton { 
        padding: 1px 2px 1px 2px; 
        border-radius: 0; 
        height:28px; 
        width: 28px; 
        cursor: default
}

.tpRibbonButton {
        background-color: #ccc;
        color: #333;
        padding:  1px 2px 1px 2px; 
        border-radius: 4px;
        height: 24px;
        border: 1px solid #c5c5c5;
        vertical-align: top;
        text-align: center;
        margin-right: 8px;
        top: 3px;
        position: relative;
        padding-left: 4px;
        padding-right: 4px;
}

.tpClicked { background-color: #AAA }
.tpClicked:hover { background-color: #AAA }
.btn-primary.load-dataset {float: right; margin-left: 10px; color: white; font-size: 12px; margin-top: -4px;}
.list-group-item.active>.btn-primary {color: #337ab7;background-color: #fff;}
.list-group-item .badge {margin-top: -2px;}

.link,
.tpDatasetPane a { 
        text-decoration: underline; 
        color: #0000EE; 
        cursor: pointer; 
}

.tpSameLink {
    text-decoration: underline; 
    cursor: pointer; 
    color: darkgrey; 
    float: right
}

.tpDatasetPane {
        padding-top: 10px !important;
        border-radius: 4px;
}

.tpDatasetPane h4 {
        margin-top: 0;
}
/* ... */

